--- a/withdraw.html
+++ b/withdraw.html
@@ -9,10 +9,10 @@
          <h1> WITHDRAWALS</h1>
          <p style="float: right">
          <h4>
-            <a href="index.html"> Home </a> |
+            <a href="home.html"> Home </a> |
             <a href="deposit.html"> Deposit</a> |
             <a href="withdraw.html"> Withdraw </a> |
-            <a href="contact.html"> Contact us </a> 
+            <a href="contact us.html"> Contact us </a> 
      </h4>
          </p>
       </nav>
