--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
          <h1> CONTACT US</h1>
          <p style="float: right">
          <h4>
-            <a href="index.html"> Home </a> |
+            <a href="home.html"> Home </a> |
             <a href="deposit.html"> Deposit</a> |
             <a href="withdraw.html"> Withdraw </a> |
             <a href="contact.html"> Contact us </a> 
