--- a/deposit.html
+++ b/deposit.html
@@ -12,7 +12,7 @@
             <a href="home.html"> Home </a> |
             <a href="deposit.html"> Deposit</a> |
             <a href="withdraw.html"> Withdraw </a> |
-            <a href="contact.html"> Contact us </a> 
+            <a href="contact.html"> contact </a> 
      </h4>
          </p>
       </nav>
