--- a/withdraw.html
+++ b/withdraw.html
@@ -11,8 +11,8 @@
          <h4>
             <a href="home.html"> Home </a> |
             <a href="deposit.html"> Deposit</a> |
-            <a href="withdraw.html"> Withdraw </a> |
-            <a href="contact.html"> contact </a> 
+            <a href="withdraw.html"> Withdraw </a> 
+            
      </h4>
          </p>
       </nav>
