--- a/deposit.html
+++ b/deposit.html
@@ -10,9 +10,9 @@
          <p style="float: right">
          <h4>
             <a href="home.html"> Home </a> |
-            <a href="deposit.html"> Deposit</a> |
-            <a href="withdraw.html"> Withdraw </a> |
-            <a href="contact.html"> contact </a> 
+            <a href="deposit.html"> Deposit</a> 
+ <a href="withdraw.html"> Withdraw </a> 
+           
      </h4>
          </p>
       </nav>
