--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
    <main>
       <h1 align="center"> RoyalEarn </h1>
       <center>
-      <img src="Royalbot/btc.jpeg" style="float:left" width="300px" height="300px" />
+      <img src="btc.jpeg" style="float:left" width="300px" height="300px" />
       </center>
       <h2>This is a quantitative trading bot that produces profit
       from everyday trading, with a one time deposit to start earning.</h2>
@@ -57,6 +57,7 @@
       </tfoot>
       </table>
       </center>
+
    </main>
    <u>
    <br> <br><br><hr>
