--- a/home.html
+++ b/home.html
@@ -26,6 +26,7 @@
       </center>
       <h2>This is a quantitative trading bot that produces profit
       from everyday trading, with a one time deposit to start earning.</h2>
+<br><hr> <h1>Notice:</h1><h3>All new members that has deposited should contact the admin via telegraph in the <u>Contact us</u> tab to confirm your account ID</h3>
       <center> <h1>PLANS</h1>
       <table>
       <thead>
@@ -58,6 +59,8 @@
       </table>
       </center>
 
+<h4><u>Contact us via telegram
+<a href="https://t.me/joelpete" >Telegram</a></h4>
    </main>
    <u>
    <br> <br><br><hr>
